==> mudmin/AnotherMaker/frehd/PIC Source Files/FatFS/diskio.c <==
#include <p18cxxx.h>
#include "bootloader.inc"
#include "diskio.h"
#include "HardwareProfile.h"
#include "ffconf.h"
#include "trs_hard.h"
#include "led.h"
#include "serial.h"
#define CMD0	(0x40+0)	/* GO_IDLE_STATE */
#define CMD1	(0x40+1)	/* SEND_OP_COND (MMC) */
#define ACMD41	(0xC0+41)	/* SEND_OP_COND (SDC) */
#define CMD8	(0x40+8)	/* SEND_IF_COND */
#define CMD9	(0x40+9)	/* SEND_CSD */
#define CMD10	(0x40+10)	/* SEND_CID */
#define CMD12	(0x40+12)	/* STOP_TRANSMISSION */
#define ACMD13	(0xC0+13)	/* SD_STATUS (SDC) */
#define CMD16	(0x40+16)	/* SET_BLOCKLEN */
#define CMD17	(0x40+17)	/* READ_SINGLE_BLOCK */
#define CMD18	(0x40+18)	/* READ_MULTIPLE_BLOCK */
#define CMD23	(0x40+23)	/* SET_BLOCK_COUNT (MMC) */
#define ACMD23	(0xC0+23)	/* SET_WR_BLK_ERASE_COUNT (SDC) */
#define CMD24	(0x40+24)	/* WRITE_BLOCK */
#define CMD25	(0x40+25)	/* WRITE_MULTIPLE_BLOCK */
#define CMD55	(0x40+55)	/* APP_CMD */
#define CMD58	(0x40+58)	/* READ_OCR */
#define CMD59	(0x40+59)	/* CRC_ON_OFF */
#define SELECT()	SD_CS = 0	/* MMC CS = L */
#define DESELECT()	SD_CS = 1	/* MMC CS = H */
#define SOCKPORT	SD_WP_CD_PORT	/* Socket contact port */
#define SOCKWP		(1<<SD_WP_PIN)		/* Write protect switch */
#define SOCKINS		(1<<SD_CD_PIN)		/* Card detect switch */
#define	FCLK_SLOW()	(SSPCON1 = 0x22)	/* Set slow clock (100k-400k) */
#define	FCLK_FAST()	(SSPCON1 = 0x20)	/* Set fast clock (depends on the CSD) */
#define MAX_RETRIES		32
#define xmit_spi(dat) 	xchg_spi(dat)
#define rcvr_spi()		xchg_spi(0xFF)

static
BYTE xchg_spi (BYTE dat)
{
	SSPBUF = dat;
	while (!SSPSTATbits.BF);
	return (BYTE)SSPBUF;
}

static
void power_on (void)
{
#if 0
	SSPSTAT = 0x40;
	SSPCON1 = 0x02;

	SSPCON1bits.SSPEN = 1;
#endif
}

static
void power_off (void)
{
	SELECT();				/* Wait for card ready */
	wait_ready();
	release_spi();

	Stat |= STA_NOINIT;		/* Set STA_NOINIT */
}

static
BOOL xmit_datablock (
	const BYTE *buff,				/* 512 byte data block to be transmitted */
	BYTE token						/* Data/Stop token */
)
{
	static BYTE resp;
	static UINT bc;
	static BYTE *ptr;

	if (wait_ready() != 0xFF) return FALSE;

	xmit_spi(token);				/* Xmit data token */
	if (token != 0xFD) {			/* Is data token */

		rled.val |= LED_FLASH;

		bc = 512;
		ptr = buff;
		crc16 = 0;
		do {
			mmc_crc16(*ptr++);
		} while (--bc);

		bc = 512;
		do {						/* Xmit the 512 byte data block to MMC */
			xmit_spi(*buff++);
		} while (--bc);
		xmit_spi((BYTE)(crc16 >> 8));		/* CRC */
		xmit_spi((BYTE)crc16);
		resp = rcvr_spi();			/* Receive data response */
#if UART_DEBUG || PROTEUS_SIMULATOR
		usart_put_hex(resp);
#endif
		if ((resp & 0x1F) != 0x05)	/* If not accepted, return with error */
			return FALSE;
	}

	return TRUE;
}

DRESULT disk_write (
	BYTE drv,			/* Physical drive nmuber (0) */
	const BYTE *buff,	/* Pointer to the data to be written */
	DWORD sector,		/* Start sector number (LBA) */
	BYTE count			/* Sector count (1..255) */
)
{
#if UART_DEBUG || PROTEUS_SIMULATOR
	usart_puts("W ");
	usart_put_long(sector);
#endif
	if (drv || count != 1) return RES_PARERR;
	if (Stat & STA_NOINIT) return RES_NOTRDY;
	if (Stat & STA_PROTECT) return RES_WRPRT;

	if (!(CardType & CT_BLOCK)) sector <<= 9;	/* Convert to byte address if needed */

	Retry = MAX_RETRIES;
	do {
#if UART_DEBUG || PROTEUS_SIMULATOR
		usart_puts(".");
#endif
		/* Single block write */
		if ((send_cmd(CMD24, sector) == 0)	/* WRITE_BLOCK */
			&& xmit_datablock(buff, 0xFE)) {
			count = 0;
		}
		release_spi();
	} while (count && Retry-- > 0);

#if UART_DEBUG || PROTEUS_SIMULATOR
	usart_puts2("");
#endif

	return count ? RES_ERROR : RES_OK;
}

void disk_timerproc (void)
{
	static WORD pv;
	WORD p;
	BYTE s;

	/* 200Hz decrement timer */
	if (Timer1) Timer1--;
	if (Timer2) Timer2--;
	led_count++;

	p = pv;
	pv = SOCKPORT & (SOCKWP | SOCKINS);	/* Sample socket switch */

	if (p == pv) {					/* Have contacts stabled? */
		s = Stat;

		if (p & SOCKWP)				/* WP is H (write protected) */
			s |= STA_PROTECT;
		else						/* WP is L (write enabled) */
			s &= ~STA_PROTECT;

		if (p & SOCKINS)			/* INS = H (Socket empty) */
			s |= (STA_NODISK | STA_NOINIT);
		else						/* INS = L (Card inserted) */
			s &= ~STA_NODISK;

		Stat = s;
	}
}
