==> aequitasetveritas/recolector-msp430g2955/diskio.c <==
#include "diskio.h"
#include <msp430.h>
#include <stdint.h>
#include "uart.h"
#include "xprintf.h"
#define CS_LOW()	P3OUT &= ~BIT0			/* CS=low */
#define	CS_HIGH()	P3OUT |= BIT0;			/* CS=high */
#define MMC_CD		1                       /* Card detected.   yes:true, no:false, default:true */
#define MMC_WP		0       		/* Write protected. yes:true, no:false, default:false */
#define	FCLK_SLOW()	SPCR = 0x52		/* Set slow clock (F_CPU / 64) */
#define	FCLK_FAST()	SPCR = 0x50		/* Set fast clock (F_CPU / 2) */
#define CMD0	(0)			/* GO_IDLE_STATE */
#define CMD1	(1)			/* SEND_OP_COND (MMC) */
#define	ACMD41	(0x80+41)	/* SEND_OP_COND (SDC) */
#define CMD8	(8)			/* SEND_IF_COND */
#define CMD9	(9)			/* SEND_CSD */
#define CMD10	(10)		/* SEND_CID */
#define CMD12	(12)		/* STOP_TRANSMISSION */
#define ACMD13	(0x80+13)	/* SD_STATUS (SDC) */
#define CMD16	(16)		/* SET_BLOCKLEN */
#define CMD17	(17)		/* READ_SINGLE_BLOCK */
#define CMD18	(18)		/* READ_MULTIPLE_BLOCK */
#define CMD23	(23)		/* SET_BLOCK_COUNT (MMC) */
#define	ACMD23	(0x80+23)	/* SET_WR_BLK_ERASE_COUNT (SDC) */
#define CMD24	(24)		/* WRITE_BLOCK */
#define CMD25	(25)		/* WRITE_MULTIPLE_BLOCK */
#define CMD32	(32)		/* ERASE_ER_BLK_START */
#define CMD33	(33)		/* ERASE_ER_BLK_END */
#define CMD38	(38)		/* ERASE */
#define CMD55	(55)		/* APP_CMD */
#define CMD58	(58)		/* READ_OCR */

static
void power_on (void) {
    /*Inicializacion SPI*/
    P3SEL |= BIT1 | BIT2 | BIT3;
    P3SEL2 &= ~(BIT1 | BIT2 | BIT3);
    UCB0CTL1 |= UCSWRST; /* USCI-B specific SPI setup */
    UCB0CTL0 = UCCKPH | UCMSB | UCMST | UCMODE_0 | UCSYNC; // SPI mode 0, master
    UCB0BR0 = 0x28; // 400kHz
    UCB0BR1 = 0x00;
    UCB0CTL1 = UCSSEL_2; // Clock = SMCLK, clear UCSWRST and enables USCI_B module.
    P3DIR |= BIT0; // P3.0 output direction
}

static
void power_off (void)
{
    /*Por ahora solamente sostengo el reset del modulo*/
    UCB0CTL1 |= UCSWRST;
}

BYTE xchg_spi (		/* Returns received data */
	BYTE dat		/* Data to be sent */
) {
    BYTE dummy;
    while ((IFG2 & UCB0TXIFG) == 0); // wait while not ready / for RX
    UCB0TXBUF = dat; // write
    while ((IFG2 & UCB0RXIFG) == 0); // wait for RX buffer (full)
    dummy = UCB0RXBUF;
    return (dummy);
}

static
int xmit_datablock (
	const BYTE *buff,	/* 512 byte data block to be transmitted */
	BYTE token			/* Data/Stop token */
)
{
	BYTE resp;


	if (!wait_ready(500)){xputs("xmit_datablock1"); return 0;}

	xchg_spi(token);					/* Xmit data token */
	if (token != 0xFD) {	/* Is data token */
		xmit_spi_multi(buff, 512);		/* Xmit the data block to the MMC */
		resp=xchg_spi(0xFF);					/* CRC (Dummy) */
		xprintf("\n\rxmit_datablock response1: %02x\n\r",resp);
		resp=xchg_spi(0xFF);
		xprintf("\n\rxmit_datablock response2: %02x\n\r",resp);
		resp = xchg_spi(0xFF);			/* Reveive data response */
		xprintf("\n\rxmit_datablock response3: %02x\n\r",resp);

		if ((resp & 0x1F) != 0x05){		/* If not accepted, return with error */
			return 0;
		}//xputs("xmit_datablock2"); return 0;}
	}

	return 1;
}

DRESULT disk_write (
	BYTE pdrv,			/* Physical drive nmuber (0) */
	const BYTE *buff,	/* Pointer to the data to be written */
	DWORD sector,		/* Start sector number (LBA) */
	UINT count			/* Sector count (1..128) */
)
{
	xputs("\n\rdisk_write_inicio ");
	xprintf("count: %02x ",count);
	xprintf(" sector: %04x",sector>>16);
	xprintf("%04x ",sector);
	if (pdrv || !count) return RES_PARERR;
	if (Stat & STA_NOINIT) return RES_NOTRDY;
	if (Stat & STA_PROTECT) return RES_WRPRT;

	if (!(CardType & CT_BLOCK)) sector *= 512;	/* Convert to byte address if needed */

	if (count == 1) {	/* Single block write */
		if ((send_cmd(CMD24, sector) == 0)){
			/* WRITE_BLOCK */
			int res;
			xputs("Aceptado CMD24---Transmitiendo\n\r");
			if((res=xmit_datablock(buff, 0xFE))){
				xputs("Bloque Escrito Ok\n\r");
				count = 0;
			}else{
				xprintf("ERROR; xmit_datablock res: %02x\n\r",res);
			}
		}else{
			xputs("ERROR; CMD24 no aceptado\n\r");
		}


	}
	else {				/* Multiple block write */
		if (CardType & CT_SDC) send_cmd(ACMD23, count);
		if (send_cmd(CMD25, sector) == 0) {	/* WRITE_MULTIPLE_BLOCK */
			do {
				if (!xmit_datablock(buff, 0xFC)) break;
				buff += 512;
			} while (--count);
			if (!xmit_datablock(0, 0xFD))	/* STOP_TRAN token */
				count = 1;
		}
	}
	deselect();
	xprintf(" disk_write_fin count: %02x\n\r",count);
	return count ? RES_ERROR : RES_OK;
}

void disk_timerproc (void)
{
	BYTE n, s;


	n = Timer1;				/* 100Hz decrement timer */
	if (n) Timer1 = --n;
	n = Timer2;
	if (n) Timer2 = --n;

	s = Stat;

	if (MMC_WP)				/* Write protected */
		s |= STA_PROTECT;
	else					/* Write enabled */
		s &= ~STA_PROTECT;

	if (MMC_CD)				/* Card inserted */
		s &= ~STA_NODISK;
	else					/* Socket empty */
		s |= (STA_NODISK | STA_NOINIT);

	Stat = s;				/* Update MMC status */
}
